fixed layout bugs and  some unnnessecary renders

--- a/src/components/Contact/Contact.scss
+++ b/src/components/Contact/Contact.scss
@@ -1,10 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 .contact{
     a{
         text-decoration: none;
     }
     &-top{
         width: 100%;
-        height: 20vh;
+        height: 22vh;
         background-color: black;
         &-links{
             display: flex;
@@ -47,17 +48,18 @@
     }
     &-bottom{
         width: 100%;
-        height: 6vh;
-        background-color: #181818;
+        height: 4vh;
+        background-color: #131313;
         display: flex;
         justify-content: flex-start;
         align-items: center;
         .copyright{
             &>span{
-                font-weight: 400;
+                font-family: 'Poppins';
+                font-weight: 500;
                 margin-left: 20px;
-                font-size: 0.7rem;
-                color: rgb(141, 141, 141);
+                font-size: 0.6rem;
+                color: rgb(156, 156, 156);
             }
         }
     }
