--- a/src/components/Projects/OtherProjects/OtherProjects.scss
+++ b/src/components/Projects/OtherProjects/OtherProjects.scss
@@ -3,13 +3,6 @@
         width: 300vw;
         height: 100%;
         justify-content: center;
-        img{
-            transform: scale(1);
-            transition: transform 1s;
-            &:hover{
-                transform: scale(1.2);
-            }
-        }
     &-wrapper{
         display: flex;
         flex-direction: row;
@@ -18,9 +11,8 @@
     }
     &-name1{
         z-index: 1;
-        position: absolute;
-        top: 44%;
-        left: 20%;
+        margin-top: 350px;
+        margin-right: -100px;
         &>h6{
             font-size: 5.6rem;
             font-weight: 600;
@@ -39,9 +31,8 @@
     }
     &-name2{
         z-index: 1;
-        position: absolute;
-        top: 44%;
-        left: 42%;
+        margin-top: 350px;
+        margin-right: -40px;
         &>h6{
             font-size: 5.6rem;
             font-weight: 600;
@@ -59,9 +50,8 @@
     }
     &-name3{
         z-index: 1;
-        position: absolute;
-        top: 44%;
-        left: 25%;
+        margin-top: 350px;
+        margin-right: -10px;
         &>h6{
             font-size: 5.6rem;
             font-weight: 600;
@@ -85,8 +75,13 @@
         align-items: flex-end;
         height: 100vh;
         img{
-            width: 60%;
-            height: 62vh !important;
+            transform: scale(1);
+            transition: transform 1s;
+            &:hover{
+                transform: scale(1.1);
+            }
+            width: 800px;
+            height: 58vh !important;
         }
     }
     &-image2{
@@ -96,8 +91,13 @@
         align-items: flex-end;
         height: 100vh;
         img{
-            width: 25%;
-            height: 80vh !important;
+            transform: scale(1);
+            transition: transform 1s;
+            &:hover{
+                transform: scale(1.1);
+            }
+            width: 350px;
+            height: 78vh !important;
             margin-right: 100px;
         }
     }
@@ -107,10 +107,15 @@
         justify-content: center;
         align-items: flex-end;
         height: 100vh;
-        margin-right: 30px;
+        margin-right: 80px;
         img{
-            width: 60%;
-            height: 55vh !important;
+            transform: scale(1);
+            transition: transform 1s;
+            &:hover{
+                transform: scale(1.1);
+            }
+            width: 780px;
+            height: 52vh !important;
         }
     }
 }
