--- a/src/components/Projects/Project1/Project1.scss
+++ b/src/components/Projects/Project1/Project1.scss
@@ -45,19 +45,19 @@
         margin-top: 100px;
         img{
             z-index: 0;
-            width: 80%;
+            width: 430px;
             height: 35vh;
         }
     }
     &-image2{
         margin-top: 150px;
-        margin-right: 30px;
+        margin-right: 10px;
         display: flex;
         flex-direction: row;
         justify-content: flex-end;
         img{
             z-index: 0;
-            width: 80%;
+            width: 800px;
             height: 58vh;
         }
     }
