--- a/src/components/Projects/Project2/Project2.scss
+++ b/src/components/Projects/Project2/Project2.scss
@@ -14,7 +14,7 @@
         z-index: 1;
         position: absolute;
         top: 44%;
-        left: 18%;
+        left: 20%;
         &>h6{
             font-size: 5.6rem;
             font-weight: 600;
@@ -36,16 +36,15 @@
         flex-direction: row;
         justify-content: flex-end;
         align-items: center;
-        margin-right: 40px;
         img{
             transform: scale(1);
             transition: transform 1s;
             &:hover{
-                transform: scale(1.2);
+                transform: scale(1.1);
             }
             z-index: 0;
-            width: 60%;
-            height: 60vh;
+            width: 800px;
+            height: 55vh;
         }
     }
 }
